[gd_scene load_steps=19 format=3 uid="uid://bohm4ss31l0fl"]

[ext_resource type="Script" uid="uid://crjrqqwac6jsk" path="res://scripts/player.gd" id="1_se5fe"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="6_8px16"]
[ext_resource type="Texture2D" uid="uid://dnfut4uxnkagl" path="res://assets/sprites/Warrior/Warrior_Run.png" id="6_kedyd"]
[ext_resource type="Texture2D" uid="uid://bmy7yyf4elsgy" path="res://assets/sprites/Warrior/Warrior_Idle.png" id="7_8px16"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="7_kedyd"]
[ext_resource type="Script" uid="uid://c6rhor2wdor1a" path="res://scripts/animations/runAnimator.gd" id="7_v4p53"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="8_v4p53"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="9_32af4"]
[ext_resource type="Script" uid="uid://bpvi5kdtuctoj" path="res://scripts/animations/animationManager.gd" id="12_sjxxq"]
[ext_resource type="Script" uid="uid://bvkker5rhnufn" path="res://scripts/idleAnimator.gd" id="13_sjxxq"]

[sub_resource type="Animation" id="Animation_32af4"]
resource_name = "Idle"
length = 0.4
loop_mode = 1

[sub_resource type="Animation" id="Animation_v4p53"]
length = 0.001

[sub_resource type="Animation" id="Animation_kedyd"]
resource_name = "attack"
length = 0.5

[sub_resource type="Animation" id="Animation_sjxxq"]
resource_name = "attack2"
length = 0.5

[sub_resource type="Animation" id="Animation_8px16"]
resource_name = "run"
length = 0.6
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sjxxq"]
_data = {
&"Idle": SubResource("Animation_32af4"),
&"RESET": SubResource("Animation_v4p53"),
&"attack": SubResource("Animation_kedyd"),
&"attack2": SubResource("Animation_sjxxq"),
&"run": SubResource("Animation_8px16")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kedyd"]
size = Vector2(17, 20)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_32af4"]
nodes/output/position = Vector2(1400, 106.667)

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 0
script = ExtResource("1_se5fe")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("6_8px16")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("7_kedyd")
initial_state = NodePath("Grounded")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Grounded" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_v4p53")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="groundToAir" type="Node" parent="StateChart/CompoundState/Grounded"]
script = ExtResource("9_32af4")
to = NodePath("../../Air")
event = &"jump"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Air" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_kedyd")
initial_state = NodePath("Jumped")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="airToGround" type="Node" parent="StateChart/CompoundState/Air"]
script = ExtResource("9_32af4")
to = NodePath("../../Grounded")
event = &"airToGround"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Jumped" type="Node" parent="StateChart/CompoundState/Air"]
script = ExtResource("8_v4p53")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="toDoubleJump" type="Node" parent="StateChart/CompoundState/Air/Jumped"]
script = ExtResource("9_32af4")
to = NodePath("../../DoubleJumped")
event = &"jump"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="DoubleJumped" type="Node" parent="StateChart/CompoundState/Air"]
script = ExtResource("8_v4p53")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
libraries = {
&"": SubResource("AnimationLibrary_sjxxq")
}
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_kedyd")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_32af4")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationManager" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 4)
scale = Vector2(0.5, 0.5)
script = ExtResource("12_sjxxq")
metadata/_custom_type_script = "uid://bpvi5kdtuctoj"

[node name="Animator_Run" type="Sprite2D" parent="AnimationManager" node_paths=PackedStringArray("animation_manager", "animation_player")]
unique_name_in_owner = true
visible = false
position = Vector2(0, -38)
texture = ExtResource("6_kedyd")
hframes = 6
script = ExtResource("7_v4p53")
animation_manager = NodePath("..")
animation_player = NodePath("../../AnimationPlayer")
metadata/_custom_type_script = "uid://dwkv0jttmsyn"

[node name="Animator_Idle" type="Sprite2D" parent="AnimationManager" node_paths=PackedStringArray("animation_manager", "animation_player")]
unique_name_in_owner = true
position = Vector2(-2, -37)
texture = ExtResource("7_8px16")
hframes = 8
frame = 2
script = ExtResource("13_sjxxq")
animation_manager = NodePath("..")
animation_player = NodePath("../../AnimationPlayer")
metadata/_custom_type_script = "uid://dwkv0jttmsyn"

[connection signal="state_entered" from="StateChart/CompoundState/Grounded" to="." method="_on_grounded_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Grounded" to="." method="_on_can_jump_state_physics_processing"]
[connection signal="taken" from="StateChart/CompoundState/Grounded/groundToAir" to="." method="_on_transition_taken"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Air/Jumped" to="." method="_on_can_jump_state_physics_processing"]
